--- a/Requirements/requirements-eval-old.txt
+++ b/Requirements/requirements-eval-old.txt
@@ -1,13 +1,13 @@
 beautifulsoup4==4.8.2
 blake3==0.4.1
-chardet==4.0.0
+chardet==5.2.0
 cryptography==38.0.0
 datetime==5.5
 Django==4.2.7
 dnspython==2.6.1
 docxtpl==0.11.5
 Faker==20.1.0
-flask_login==0.5.0
+flask_login==0.6.3
 flask_restful==0.3.10
 flask_wtf==1.2.1
 Flask-Mail==0.9.1
@@ -28,11 +28,11 @@ networkx==2.6.3
 nltk==3.8
 numba==0.55.0
 numpy==1.21.2
-opencv-python==3.4.11.39
-openpyxl==3.0.0
-pandas==0.17.0
+opencv-python-headless==4.9.0.80
+openpyxl==3.1.2
+pandas==2.0.3
 Pillow==10.3.0
-prettytable==2.0.0
+prettytable==3.10.0
 psutil==5.9.5
 pycryptodome==3.14.1
 pyfakefs==5.4.1
@@ -40,23 +40,23 @@ pyquery==1.4.3
 pytesseract==0.3.10
 pytest==8.2.0
 python_http_client==3.3.7
-python-dateutil==2.7.0
+python-dateutil==2.9.0
 python-docx==1.1.0
 python-Levenshtein-wheels
-pytz==2021.1
-PyYAML==5.3.0
+pytz==2023.3.post1
+PyYAML==6.0.1
 requests_mock==1.11.0
 requests==2.31.0
 Requests==2.31.0
 rsa==4.9
 scikit-image==0.18.0
-scikit-learn==0.18.0
-scipy==1.0.0
-seaborn==0.9.0
+scikit-learn==1.3.1
+scipy==1.7.2
+seaborn==0.13.2
 selenium==4.15
 sendgrid==6.11.0
 shapely==2.0.4
-soundfile==0.10.1
+soundfile==0.12.1
 statsmodels==0.14.0
 statsmodels==0.14.0
 sympy==1.12
@@ -67,8 +67,8 @@ Werkzeug==3.0.1
 wikipedia==1.4.0
 wordcloud==1.9.3
 wordninja==2.0.0
-WTForms==2.3.1
+WTForms==3.1.2
 xlrd==2.0.1
 xlrd==2.0.1
 xlwt==1.3.0
-xmltodict==0.12.0
+xmltodict==0.13.0
