--- a/Requirements/requirements-eval.txt
+++ b/Requirements/requirements-eval.txt
@@ -7,16 +7,16 @@ openpyxl==3.0.0
 pandas==0.24.2
 prettytable==2.0.0
 pytz==2021.1
-scipy==1.0.0
+# scipy==1.0.0
 seaborn==0.9.0
-scikit-learn==0.18.0
+# scikit-learn==0.18.0
 soundfile==0.10.1
 WTForms==2.3.1
 xmltodict==0.12.0
 PyYAML==5.3.0
 
 # Dependencies for the above libraries (Python 3.7 compatible)
-numpy==1.16.6
+numpy==1.15.4
 matplotlib==2.2.5
 Flask==1.1.4
 Werkzeug==1.0.1
