--- a/Requirements/requirements-eval.txt
+++ b/Requirements/requirements-eval.txt
@@ -1,6 +1,6 @@
 # Core required libraries
 chardet==4.0.0
-opencv-python==3.4.11.39
+# opencv-python==3.4.11.39
 python-dateutil==2.7.0
 Flask-Login==0.5.0
 openpyxl==3.0.0
