--- a/Requirements/requirements-eval.txt
+++ b/Requirements/requirements-eval.txt
@@ -1,6 +1,7 @@
 # Core required libraries
 chardet==4.0.0
-python-dateutil==2.7.3
+python-dateutil==2.7.0
+opencv-python==3.4.11.39
 Flask-Login==0.5.0
 openpyxl==3.0.0
 pandas==1.3.5
@@ -12,9 +13,22 @@ WTForms==2.3.1
 xmltodict==0.12.0
 PyYAML==5.3.0
 
+# Additional required libraries
+folium==0.12.1
+nltk==3.6.7
+librosa==0.8.1
+scikit-learn==0.19.2
+geopy==2.1.0
+Faker==8.1.0
+textblob==0.15.3
+requests==2.27.1
+Flask-WTF==0.15.1
+Pillow==8.4.0
+scipy==1.5.4
+
 # Dependencies for the above libraries (Python 3.7 compatible)
 numpy==1.19.5
-matplotlib==2.2.5
+matplotlib==3.3.4
 Flask==1.1.4
 Werkzeug==1.0.1
 Jinja2==2.11.3
@@ -29,3 +43,22 @@ pyparsing==2.4.7
 cycler==0.10.0
 python-dateutil==2.7.3
 pytz==2021.1
+certifi==2021.10.8
+charset-normalizer==2.0.12
+idna==3.3
+urllib3==1.26.8
+joblib==1.0.1
+threadpoolctl==3.0.0
+geographiclib==1.52
+branca==0.4.2
+numba==0.53.1
+audioread==2.1.9
+pooch==1.6.0
+resampy==0.2.2
+scikit-image==0.17.2
+decorator==4.4.2
+llvmlite==0.36.0
+imageio==2.15.0
+tifffile==2020.9.3
+PyWavelets==1.1.1
+networkx==2.5.1
