--- a/Requirements/requirements-eval.txt
+++ b/Requirements/requirements-eval.txt
@@ -1,7 +1,7 @@
 # Core required libraries
 chardet==4.0.0
 python-dateutil==2.7.3
-opencv-python==3.4.11.39
+opencv-python-headless==4.9.0.80
 Flask-Login==0.5.0
 openpyxl==3.0.0
 pandas==1.3.5
@@ -33,6 +33,8 @@ Flask==1.1.4
 Werkzeug==1.0.1
 Jinja2==2.11.3
 MarkupSafe==1.1.1
+llvmlite==0.36.0
+numba==0.53.1
 itsdangerous==1.1.0
 click==7.1.2
 cffi==1.15.0
